<resources>
    <string name="label_title_home">首页</string>
    <string name="label_title_mall">商城</string>
    <string name="label_title_scan"></string>
    <string name="label_title_msg">交流</string>
    <string name="label_title_me">我的</string>
    <string name="label_title_confirm">待确认</string>
    <string name="label_title_service">待核销</string>
    <string name="label_title_refund">已退款</string>
    <string name="label_title_complete">已完成</string>
    <string name="label_title_stylist">美发师</string>
    <string name="label_title_store">门店</string>
    <string name="label_title_works">作品</string>
    <string name="label_service_manager">服务管理</string>
    <string name="label_comment_manager">评价管理</string>
    <string name="label_time_manager">时间管理</string>
    <string name="label_store_manager">门店管理</string>
    <string name="home_stylist_invite">邀请美发师</string>
    <string name="invite_reward_des">邀请好友注册永久收益，好友获得%s美发大礼包（详情请扫描上面二维码查看）</string>
    <string name="label_mine_stylist">我的美发师</string>
    <string name="home_order_statistics">订单统计</string>
    <string name="home_order_manager">预约管理</string>
    <string name="label_title_order_details">订单详情</string>
    <string name="label_mine_orders">我的订单</string>
    <string name="label_works_details">作品详情</string>
    <string name="login">登&#160;录</string>
    <string name="ok">确 定</string>
    <string name="determine">确定</string>
    <string name="cancel">取 消</string>
    <string name="back">返回</string>
    <string name="skip">跳过</string>
    <string name="commit">提 交</string>
    <string name="go_on">继续</string>
    <string name="next">下一步</string>
    <string name="save">保 存</string>
    <string name="save2">保存</string>
    <string name="phone">电话</string>
    <string name="message">消息</string>
    <string name="submit">提交</string>
    <string name="binding">绑定</string>
    <string name="all">全部</string>
    <string name="description">说明</string>
    <string name="advisory">咨询</string>
    <string name="common_forward">转发</string>
    <string name="common_look">查看</string>
    <string name="common_collection">收藏</string>
    <string name="common_filter">筛选</string>
    <string name="common_integrate_sort">综合排序</string>
    <string name="common_nearby">附近</string>
    <string name="no_data">暂无数据</string>
    <string name="decimal_places_2">%.2f</string>
    <string name="tv_title_left">返回</string>
    <string name="tv_title">标题</string>
    <string name="tv_title_right">更多</string>
    <string name="exit">再按一次退出程序</string>
    <string name="login_use_password">密码登录</string>
    <string name="login_use_code">手机登录</string>
    <string name="login_phone">输入手机号</string>
    <string name="login_code">输入验证码</string>
    <string name="login_password">密&#160;&#160;&#160;&#160;码：</string>
    <string name="login_get_code">获取验证码</string>
    <string name="login_get_code_time">%s\s</string>
    <string name="login_get_again">重新获取</string>
    <string name="login_register_hint">未注册手机号将自动注册成为意约平台账户</string>
    <string name="login_forget">忘记密码?</string>
    <string name="login_wx">微信登录</string>
    <string name="account">输入账号</string>
    <string name="password">输入登录密码</string>
    <string name="login2">登 录</string>
    <string name="hint">使用第三方账号登录</string>
    <string name="hint2">登录即阅读并同意服务协议</string>
    <string name="forget_password">忘记密码?</string>
    <string name="login_phone_code">请输入手机验证码</string>
    <string name="set_password">请输入设置密码</string>
    <string name="next_password">请重新输入一遍密码</string>
    <string name="hi">Hi~意约!&#8195;登录</string>
    <string name="login_hint1">登录即注册表示同意</string>
    <string name="login_hint2">用户协议、隐私条款</string>
    <string name="use_password_login">用账号密码登录</string>
    <string name="use_Verification_login">用短信验证码登录</string>
    <string name="invite_message">现在填写推荐人邀请码,即可获得</string>
    <string name="invite_input">选填</string>
    <string name="invite">注册成功</string>
    <string name="invite_yeah">感谢您选择意约,</string>
    <string name="rmb">0元</string>
    <string name="invite_yeah3">现金已存入您的意约钱包</string>
    <string name="recommended_reward">恭喜您！</string>
    <string name="invite_reward">邀请码：</string>
    <string name="invite_yeah2">恭喜你，获得推荐奖励！</string>
    <string name="invite_reward_content"> 1、100个代币积分</string>
    <string name="invite_finish">已放入您的意约钱包</string>
    <string name="token">50%s</string>
    <string name="reward">哦</string>
    <string name="reward2">现在填写朋友的推荐码,可获得50%s奖励哦,对方也可获得奖励</string>
    <string name="up_head_photo">上传头像</string>
    <string name="nick_name">用户昵称</string>
    <string name="user_gender">用户性别</string>
    <string name="login_password2">登录密码</string>
    <string name="confirm_password">确认密码</string>
    <string name="hint_nick_name">请输入用户昵称</string>
    <string name="hint_login_password2">请设置账号登录密码</string>
    <string name="hint_confirm_password">请再次输入登录密码进行确认</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="permissions_location">请检查点位权限是否开启</string>
    <string name="permissions_phone_state">您拒绝了获取手机状态信息权限</string>
    <string name="permissions_pic_state">您拒绝了获取手机状态信息权限</string>
    <string name="permissions_camera_state">您拒绝了获取手机相机权限</string>
    <string name="certification">作为门店负责人,需要对你的身份进行认证</string>
    <string name="real_name">真实姓名</string>
    <string name="hint_real_name">请输入真实姓名</string>
    <string name="id_number">证件号码 (身份证)</string>
    <string name="hint_id_number">请输入证件号码</string>
    <string name="update_business_license">上传你的营业执照</string>
    <string name="certificate_number">营业执照证书编号</string>
    <string name="hint_certificate_number">请输入证件编号</string>
    <string name="update_license">上传营业执照</string>
    <string name="update_hint">此照片将展示在APP首页中</string>
    <string name="update_stores_photo">上传门店照片</string>
    <string name="update_stores_cover">上传门店封面</string>
    <string name="hint_stores_photo">上传门店的环境照,限量8张</string>
    <string name="update_hand_idcard_photo">上传手持身份证照</string>
    <string name="hint_hand_idcard_photo">上传本人手持身份证照片</string>
    <string name="certification_statement"><![CDATA[您必须同意并签名<<门店拥有者服务协议>>才可完成申请]]></string>
    <string name="agree_agreement">已阅读并同意此协议</string>
    <string name="perfect_information">完善资料</string>
    <string name="status_certification">身份认证</string>
    <string name="agreement">协议</string>
    <string name="agreement_title">《服务平台门店服务协议》</string>
    <string name="agreement_content01">&#8195;&#8195;欢迎使用深圳市意约网络科技有限公司（下称意约公司）负责运营的意约美发服务APP应用软件平台（下称意约平台）提供的服务。请用户在注册前仔细阅读《意约平台用户服务协议》（下称本协议）中的全部内容。如用户不同意本协议任意内容，请不要注册或使用意约平台服务。如用户通过进入注册程序并勾选“我已阅读并同意意约平台用户服务协议”，即表示用户与意约公司就意约平台已达成协议，自愿接受本协议的所有内容。此后，用户不得以未阅读本协议内容为由拒绝履行或遵守本协议条款。意约公司有权对本协议条款进行修改，修改后的协议一旦公布即有效代替原来的协议，用户可随时查阅最新协议。</string>
    <string name="agreement_content02">&#8195;&#8195;1、在申请意约平台帐号时，用户应当向意约平台提供最新、详细及真实准确的个人注册信息。前述个人注册信息包括：用户的意约平台手机号、密码及注册意约平台帐号（或补充、更新帐号信息时）输入的其他所有信息。用户在此承诺：如果用户提供的注册资料不合法、不真实、不准确、不详尽的，用户需承担因此引起的相应责任及后果，并且意约公司保留终止用户使用意约平台各项服务的权利。</string>
    <string name="agreement_content03">&#8195;&#8195;2、意约平台的产品和服务的具体内容是通过意约美发服务APP应用软件平台为用户提供合作门店信息、门店点评信息、发型及产品价格信息、美发优惠信息、在线预约线下美发服务、在线充值在线支付、在线点评、等网络服务。</string>
    <string name="agreement_content04">&#8195;&#8195;3、通过意约平台预约的线下美发服务及有关服务或产品的资费标准、收费方式或其他有关资费的信息，意约平台不干涉定意约平台线下美发服务或产品的资费标准和收费方式，门店必须在平台上作出明确标明与说明。不得出现虚假、不真实、不准确的服务如与，门店自行处理与客户订单，鉴于意约平台与线下提供美发服务的合作发型师或/及合作美发门店为各自相互独立的法律主体，是商业合作关系，并非系劳动或劳务关系，用户在接受预约的线下美发服务过程中出现的下列情况，意约平台或/及意约公司或/及关联公司不承担任何责任：（1）门店发型师在提供服务过程中，误伤用户的头发、头皮或其身体其他部位所引起索赔或其他侵权纠纷的；（2）门店发型师或其他第三方在提供服务过程中，与用户发生冲突，故意或过失致使用户伤亡，导致被侵权赔偿或追究刑事责任的；（3）门店发型师使用的任何美发产品或工具，损害了用户的头发、头皮或其身体的其他部位而发生索赔或其他侵权纠纷的；（4）门店发型师或其他第三方提供服务过程中，损坏或者盗窃用户财物，导致发生侵权赔偿或被追究刑事责任的；（5）发型师或其他第三方与用户因提供服务而发生的其他纠纷或法律责任等。</string>
    <string name="agreement_content05">&#8195;&#8195;4、意约平台仅以“现有状况且包含所有可能错误”的形式提供相关的服务、软件或程序及任何支持服务，并仅保证：（1）意约平台所提供的服务能基本符合意约平台正式公布的要求；（2）意约平台所提供的相关服务基本与意约平台正式公布的服务承诺相符；（3）意约平台仅在商业上允许的合理范围内尽力解决意约平台在提供产品和服务过程中所遇到的任何问题。</string>
    <string name="agreement_content06">&#8195;&#8195;5、意约平台作为网络信息服务提供者平台，不担保意约平台上的信息及服务能完全、充分满足用户的需求。对于用户在使用意约平台的线上服务过程中可能遇到的错误、侮辱、诽谤、不作为、淫秽、色情或亵渎事件，意约平台或/及意约公司或/及关联公司不承担法律责任。</string>
    <string name="agreement_content07">&#8195;&#8195;6、在适用法律允许的最大范围内，意约平台明确表示不提供任何其他类型的保证，不论是明示的或默示的，包括但不限于适销性、适用性、可靠性、准确性、完整性、无病毒及无错误的任何默示保证和责任。</string>
    <string name="agreement_content08">&#8195;&#8195;7、意约平台通过意约美发服务APP应用软件平台接入互联网为用户提供服务，除此之外与服务有关的设备(包括但不限于手机及其他与接入互联网有关的装置)及所需的费用(包括但不限于网络接入费、上网设备费、手机流量费)等均应由美发师自行负担。</string>
    <string name="agreement_content09">&#8195;&#8195;8、意约有权随时审核或删除用户发布/传播的涉嫌违法或违反社会主义精神文明，或者被意约认为不妥当的内容( 包括但不限于文字、语音、图片、视频、图文等)。</string>
    <string name="agreement_content10">&#8195;&#8195;9、所有通告及其他消息都可通过APP或者所提供的联系方式发送。如平台发送相关消息由于自身原因未接收到消息未及时处理相关订单，则由门店自身解决相关问题。</string>
    <string name="agreement_content11">&#8195;&#8195;10、门店内服务美发师可分为“入驻美发师”“签约美发师”，“入驻美发师”即通过意约APP注册加入门店或被邀请进入门店的美发师，双方需遵守条款为顾客提供服务;“签约美发师”由门店自行管理、运营，如产生任何纠纷与意约平台无关，意约平台不承担责任。</string>
    <string name="title_activity_order_details">OrderDetailsActivity</string>
    <string name="order_project">服务项目：</string>
    <string name="order_store">服务门店：</string>
    <string name="order_stylist">服务美发师：</string>
    <string name="order_date">服务时间：</string>
    <string name="order_date_start">开始时间：</string>
    <string name="order_date_stop">完成时间：</string>
    <string name="order_date_cancel">取消时间：</string>
    <string name="order_date_refund">退款时间：</string>
    <string name="order_estimate_income">预计收入：</string>
    <string name="order_amount_refund">退回金额：</string>
    <string name="order_refund_scale">(项目价格*%s)</string>
    <string name="order_date_reservation">预约时间：</string>
    <string name="order_id">订单编号：</string>
    <string name="order_price">项目价格：</string>
    <string name="order_apply_reason">申请原因：</string>
    <string name="order_current_apply">当前申请：</string>
    <string name="order_price_add">服务加价：</string>
    <string name="order_price_add_reason">加价原因：</string>
    <string name="order_price_total">服务总计：</string>
    <string name="order_handling_fee">手&#160;&#160;续&#160;&#160;费：</string>
    <string name="order_see_details">查看详情</string>
    <string name="order_see_details2">查看详情></string>
    <string name="order_service_project">服务项目</string>
    <string name="order_service_bundle">TA的套餐</string>
    <string name="order_detil">订单明细</string>
    <string name="order_service_income">服务收入</string>
    <string name="comment_invite">邀请评价</string>
    <string name="comment_score">综合评分</string>
    <string name="comment_score_skill">专业技能 %s</string>
    <string name="comment_score_service">服务态度 %s</string>
    <string name="comment_score_experience">洗发体验 %s</string>
    <string name="comment_grade_high">高于平均水平</string>
    <string name="comment_look_all">查看全部评价(%s)</string>
    <string name="referral_description">推荐说明</string>
    <string name="referral_description1">&#8195;&#8195;1.被邀请人必须使用邀请人的邀请链接（注意必须是完整的邀请链接）或填写邀请码注册。</string>
    <string name="referral_description2">&#8195;&#8195;2.奖励类型，系统默认奖励为意约%s奖励，可自由选择为余额钱包或%s奖励。</string>
    <string name="referral_description3">&#8195;&#8195;3奖励%s可上链到外部数字货币交易所钱包，可转增给平台用户好友；奖励余额可用于平台消费或提现至支付宝，微信钱包。</string>
    <string name="referral_description4">&#8195;&#8195;4.邀请奖励在每笔订单完成后返还给邀请人。</string>
    <string name="referral_description5">&#8195;&#8195;5.邀请人享受的好友奖励永久有效</string>
    <string name="referral_description6">&#8195;&#8195;6.本计划自2018年11月正式开始，具体开始及结束时间以官方公告为准</string>
    <string name="update_name">更改昵称</string>
    <string name="update_name_hint1">请输入新昵称</string>
    <string name="update_name_hint2">好的名字可以让朋友更容易记住你</string>
    <string name="in_stores">加入门店</string>
    <string name="in_stores_stylist_join">平台美发师加入</string>
    <string name="in_stores_stylist_signing">店内美发师加入</string>
    <string name="invite_hint">加入须知</string>
    <string name="invite_hint1">•【平台美发师】 可以入驻多家门店（不限制入驻门店数量和地理位置），入驻申请发出后门店通过申请即可入驻成功，完成订单后获得相应的佣金；</string>
    <string name="invite_hint2">•【店内美发师】 门店的全职美发师，由门店发放相应的佣金，每个美发师只能入驻一家门店，入住后不可再申请加入其它门店，只有与入驻门店解约后恢复申请入驻权限；</string>
</resources>