<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="com.yl.technician.component.databind.ClickHandler" />

        <variable
            name="click"
            type="ClickHandler" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/alpha_95_white"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <com.yl.technician.widget.TitleView
            android:id="@+id/title_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:isHome="true"
            app:right_text="@string/skip"
            app:title_text="@string/invite" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_50"
            android:src="@drawable/send_succeed" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:orientation="horizontal"
            android:gravity="center_horizontal">

            <TextView
                android:layout_marginLeft="@dimen/dp_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/invite_yeah"
                android:textColor="@color/alpha_95_black"
                android:textSize="@dimen/sp_14" />

            <TextView
                android:id="@+id/tv_register_reward"
                android:layout_marginLeft="@dimen/dp_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rmb"
                android:textColor="@color/text_bg"
                android:textSize="@dimen/sp_14" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/invite_yeah3"
                android:textColor="@color/alpha_95_black"
                android:textSize="@dimen/sp_14" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_25"
            android:layout_marginRight="@dimen/dp_30"
            android:layout_marginTop="@dimen/dp_35"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/invite_message"
                    android:textColor="@color/login_text"
                    android:textSize="@dimen/sp_14" />

                <TextView
                    android:id="@+id/tv_daibi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/token"
                    android:textColor="@color/login_text"
                    android:textSize="@dimen/sp_14" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reward"
                    android:textColor="@color/login_text"
                    android:textSize="@dimen/sp_14" />

            </LinearLayout>

            <RelativeLayout
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_20">

                <EditText

                    android:id="@+id/et_invite_code"
                    style="@style/EditTextDefultStyle"
                    android:layout_height="50dp"
                    android:background="@drawable/edittext_bg_grey"
                    android:hint="@string/invite_input"
                    android:maxLines="1"
                    android:paddingLeft="70dp"
                    android:singleLine="true"
                    android:text="" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerInParent="true"
                    android:layout_marginLeft="@dimen/dp_6"
                    android:text="@string/invite_reward"
                    android:textColor="@color/alpha_95_black"
                    android:textSize="@dimen/sp_14" />
            </RelativeLayout>

        </LinearLayout>

        <Button
            android:id="@+id/btn_invite_commit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_marginRight="@dimen/dp_15"
            android:layout_marginTop="100dp"
            android:background="@drawable/shape_btn"
            android:onClick="@{click.onClick}"
            android:text="@string/commit"
            android:textColor="@color/alpha_95_white" />
    </LinearLayout>
</layout>