<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_bg"
    android:orientation="vertical">

    <com.yl.technician.widget.TitleView
        android:id="@+id/title_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:right_text="@string/description"
        app:title_text="@string/in_stores" />

    <Button
        android:id="@+id/tv_plat_join"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_marginRight="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_80"
        android:background="@drawable/shape_btn"
        android:text="@string/in_stores_stylist_join"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_18" />

    <Button
        android:id="@+id/tv_self_join"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_marginRight="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_30"
        android:background="@drawable/shape_btn"
        android:text="@string/in_stores_stylist_signing"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_18" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_80"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <View
                android:layout_width="@dimen/dp_120"
                android:layout_height="@dimen/dp_0_3"
                android:background="@color/hint_text"
                android:layout_gravity="center_vertical"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/invite_hint"
                android:textColor="@color/text_color"
                android:textSize="@dimen/sp_16"
                android:layout_marginLeft="@dimen/dp_15"
                android:layout_marginRight="@dimen/dp_15"/>

            <View
                android:layout_width="@dimen/dp_120"
                android:layout_height="@dimen/dp_0_3"
                android:background="@color/hint_text"
                android:layout_gravity="center_vertical"/>

        </LinearLayout>

        <TextView
            android:layout_marginTop="@dimen/dp_20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/invite_hint1"
            android:textSize="@dimen/sp_12"
            android:textColor="@color/text_color"/>
        <TextView
            android:layout_marginTop="@dimen/dp_10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/invite_hint2"
            android:textSize="@dimen/sp_12"
            android:textColor="@color/text_color"/>

    </LinearLayout>

</LinearLayout>
</layout>