<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/login_bg"
        android:orientation="vertical">

        <com.yl.technician.widget.TitleView
            android:id="@+id/title_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:right_text="@string/save2"
            app:title_text="@string/update_name" />

        <EditText
            android:id="@+id/et_name"
            style="@style/EditTextDefultStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_35"
            android:layout_marginEnd="@dimen/dp_10"
            android:layout_marginStart="@dimen/dp_10"
            android:hint="@string/update_name_hint1"
            android:maxLines="1"
            android:maxLength="12"
            android:paddingStart="@dimen/dp_13"
            android:textSize="@dimen/sp_16" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:layout_marginEnd="@dimen/dp_15"
            android:layout_marginStart="@dimen/dp_15"
            android:background="@color/login_btn_start" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp_20"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_5"
            android:text="@string/update_name_hint2"
            android:textColor="@color/text_color"
            android:textSize="@dimen/sp_14" />

    </LinearLayout>

</layout>